--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -70,8 +70,9 @@
     right: 0;
     background: $primary-color;
     opacity: 0;
+    z-index: 100;
     &:hover {
-      opacity: 1;
+      opacity: 1 !important;
     }
   }
 
