--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -16,6 +16,7 @@
   }
 
   .row-info {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,6 +32,7 @@
   }
 
   .column {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,8 +58,37 @@
     outline: none;
     &.selected {
       border: none;
-      outline: 2px solid #3c74ff;
+      outline: 2px solid $primary-color;
       z-index: 2;
+    }
+  }
+
+  .row-resize,
+  .col-resize {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: $primary-color;
+    opacity: 0;
+    z-index: 100;
+    &:hover {
+      opacity: 1 !important;
+    }
+  }
+
+  .col-resize {
+    top: 0;
+    width: 5px;
+    &:hover {
+      cursor: e-resize;
+    }
+  }
+
+  .row-resize {
+    left: 0;
+    height: 5px;
+    &:hover {
+      cursor: n-resize;
     }
   }
 }
